# b4f

./: .gitignore  README.md  curriculum.kernel-execution.v1.md  curriculum.v0.2.md  justfile  main.py  marimo.toml  package.json  pyproject.toml  registry-style-user-guide.md  tsconfig.json
notebooks/: AGENTS.md
tests/: test_smoke.py
tests/ts/: hello.test.ts
